--- a/quoteslide.css
+++ b/quoteslide.css
@@ -1,26 +1,23 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,900,700,600,500,300,200,100,800);
 
 h2 {
-    color: #535454;
-    font-size: 30px;
-    font-weight: 700;
-    font-family: 'Raleway', sans-serif;
+    margin:10.5px 0;
+  	color:#002a5b;
+  	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  	font-weight: 600;
 }
 
 #testimonial{
    padding:80px 0px;
 }
 
-#testimonial .fa.fa-quote-right{
-	color:#5db4c0;
-	font-size:30px;
-}
-
 p{
-    font-family: 'Raleway', sans-serif;
-    margin-bottom:20px;
-    margin-top:20px;
-    text-align: left;
+  font-size: :14px;
+	line-height: :1.618rem;
+	color: #535454;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: 300;
+  text-align: left;
 }
 
 .quote{
