--- a/quoteslide.css
+++ b/quoteslide.css
@@ -18,6 +18,7 @@ p{
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
   text-align: left;
+  display: inline-block;
 }
 
 .quote{
@@ -30,6 +31,7 @@ p{
     height: 150px;
     margin: 0 auto;
     border-radius: 50%;
+      display: inline-block;
 }
 
 .carousel-indicators  li {
