--- a/quoteslide.css
+++ b/quoteslide.css
@@ -7,6 +7,14 @@ h2 {
   	font-weight: 600;
 }
 
+#wrap {
+    z-index: 1;
+    position: relative;
+    max-width: 1170px;
+    margin-left: auto;
+    margin-right: auto
+}
+
 #testimonial{
    padding:80px 0px;
 }
@@ -18,7 +26,6 @@ p{
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
   text-align: left;
-  display: inline-block;
 }
 
 .quote{
@@ -31,7 +38,6 @@ p{
     height: 150px;
     margin: 0 auto;
     border-radius: 50%;
-      display: inline-block;
 }
 
 .carousel-indicators  li {
