--- a/quoteslide.css
+++ b/quoteslide.css
@@ -20,8 +20,8 @@ h2 {
 }
 
 p{
-  font-size: :14px;
-	line-height: :1.618rem;
+  font-size: 14px;
+	line-height: 1.618rem;
 	color: #535454;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
