--- a/quoteslide.css
+++ b/quoteslide.css
@@ -21,7 +21,7 @@ h2 {
 
 p{
   font-size: 14px;
-	line-height: 1.618rem;
+	line-height: 1.5em;
 	color: #535454;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
