--- a/quoteslide.css
+++ b/quoteslide.css
@@ -1,10 +1,8 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway:400,900,700,600,500,300,200,100,800);
-
-h2 {
-    margin:10.5px 0;
-  	color:#002a5b;
-  	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  	font-weight: 600;
+h2, h3, h4, h5, h6{
+	margin:10.5px 0;
+	color:#002a5b;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-weight: 600;
 }
 
 #wrap {
@@ -12,11 +10,7 @@ h2 {
     position: relative;
     max-width: 1170px;
     margin-left: auto;
-    margin-right: auto
-}
-
-#testimonial{
-   padding:80px 0px;
+    margin-right: auto;
 }
 
 p{
