--- a/quoteslide.css
+++ b/quoteslide.css
@@ -35,11 +35,11 @@ p{
 }
 
 .carousel-indicators  li {
-    background-color: #5db4c0;
+    background-color: #002a5b;
 }
 
 .carousel-indicators li.active {
-    background-color: #888383;
+    background-color: #888C8F;
 }
 
 .carousel-indicators {
