--- a/quoteslide.css
+++ b/quoteslide.css
@@ -39,7 +39,7 @@ p{
 }
 
 .carousel-indicators li.active {
-    background-color: #888C8F;
+    background-color: #dd1e25;
 }
 
 .carousel-indicators {
