more styling to be like aesseal.com

--- a/quoteslide.css
+++ b/quoteslide.css
@@ -6,6 +6,10 @@
     margin-right: auto;
 }
 
+@media(min-width:1170px) #wrap {
+  box-shadow:0 0 15px 8px rgba(181,182,185,1);
+}
+
 h2, h3, h4, h5, h6{
 	margin:10.5px 0;
 	color:#002a5b;
