--- a/quoteslide.css
+++ b/quoteslide.css
@@ -49,3 +49,48 @@ p{
 .carousel-indicators {
     bottom: -100px;
 }
+
+.dialog-box{
+    background: white;
+    width: 100%;
+    height: 55%;
+    font: normal 20px/25px 'Titillium Web', 'Arial';
+    display: table;
+    position: relative;
+    letter-spacing: 1px;
+    border-radius: 1px;
+}
+
+.dialog-box > p{
+    margin: 0;
+    display: table;
+    width: 100%;
+}
+
+.dialog-box > p > a{
+    padding: 12px 14px 0;
+    text-decoration: none;
+    color:#1E3344;
+    display: table;
+}
+
+.dialog-box:after{
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 22px 0px 0 45px;
+    border-color: #ffffff transparent transparent transparent;
+    position: absolute;
+    left: 15%;
+    bottom: -20px;
+    content: close-quote;
+    z-index: 1;
+}
+
+.info{
+    width: 100%;
+    height: 45%;
+    display: flex;
+    position: relative;
+    border-bottom:2px solid #a2904b;
+}
