--- a/quoteslide.css
+++ b/quoteslide.css
@@ -49,6 +49,15 @@ p{
 .carousel-indicators {
     bottom: -100px;
 }
+.parent-box{
+    width:25%;height:300px;float:left;display:flex;;
+}
+
+.box{
+    width:100%;
+    height:100%;
+    padding: 15px 15px 0 15px;
+}
 
 .dialog-box{
     background: white;
