--- a/quoteslide.css
+++ b/quoteslide.css
@@ -50,7 +50,11 @@ p{
     bottom: -100px;
 }
 .parent-box{
-    width:100%;height:300px;float:left;display:flex;;
+    width:100%;
+    height:300px;
+    float:left;
+    display:flex;;
+    background-color: #f5f5f5;
 }
 
 .box{
