--- a/quoteslide.css
+++ b/quoteslide.css
@@ -6,8 +6,9 @@
     margin-right: auto;
 }
 
-@media screen and(min-width:1170px) {
-#wrap{box-shadow:0 0 15px 8px rgba(181,182,185,1);
+@media (min-width:1170px) {
+#wrap {
+  box-shadow:0 0 15px 8px rgba(181,182,185,1);
 }
 }
 
