--- a/quoteslide.css
+++ b/quoteslide.css
@@ -60,6 +60,16 @@ p{
     background-color: #f5f5f5;
 }
 
+.quote p:first-child{
+	background-image:url(images\blockquote-top.png);
+	background-repeat:no-repeat;
+}
+
+.quote:last-child{
+	background-image:url(images\blockquote-bottom.png);
+	background-repeat:no-repeat;
+}
+
 .box{
     width:100%;
     height:100%;
