--- a/quoteslide.css
+++ b/quoteslide.css
@@ -66,7 +66,7 @@ p{
 }
 
 .quote:last-child{
-	background-image:url("https://raw.githubusercontent.com/Coulton7/gh-pages/quoteslider/images/blockquote-bottom.png");
+	background-image:url(quoteslider/images/blockquote-bottom.png);
 	background-repeat:no-repeat;
 }
 
