--- a/quoteslide.css
+++ b/quoteslide.css
@@ -63,11 +63,19 @@ p{
 .quote p:first-child{
 	background-image:url("https://coulton7.github.io/quoteslider/images/blockquote-top.png");
 	background-repeat:no-repeat;
+  background-position:-0.5% 0%;
+  padding-top:1.7em;
+  margin-left:auto;
+  margin-right:auto;
 }
 
 .quote:last-child{
 	background-image:url("https://coulton7.github.io/quoteslider/images/blockquote-bottom.png");
 	background-repeat:no-repeat;
+  background-position:98.7% 100%;
+  background-repeat:no-repeat;
+  padding-bottom:1.85em;
+  padding-right:0.5em;
 }
 
 .box{
