--- a/quoteslide.css
+++ b/quoteslide.css
@@ -60,10 +60,19 @@ p{
     background-color: #f5f5f5;
 }
 
-.quote p:first-child{
+.quote p:first-child (1){
 	background-image:url("https://coulton7.github.io/quoteslider/images/blockquote-top.png");
 	background-repeat:no-repeat;
   background-position:-1.5%-11%;
+  padding-top:1.7em;
+  margin-left:auto;
+  margin-right:auto;
+}
+
+.quote p:first-child (3){
+	background-image:url("https://coulton7.github.io/quoteslider/images/blockquote-top.png");
+	background-repeat:no-repeat;
+  background-position:-0.5% 0%;
   padding-top:1.7em;
   margin-left:auto;
   margin-right:auto;
