--- a/quoteslide.css
+++ b/quoteslide.css
@@ -60,7 +60,7 @@ p{
     background-color: #f5f5f5;
 }
 
-.quote p:nth-child(1):first-child{
+.quote p:nth-child(1){
 	background-image:url("https://coulton7.github.io/quoteslider/images/blockquote-top.png");
 	background-repeat:no-repeat;
   background-position:-1.5%-11%;
@@ -69,7 +69,14 @@ p{
   margin-right:auto;
 }
 
-
+.quote p:nth-child(3){
+	background-image:url("https://coulton7.github.io/quoteslider/images/blockquote-top.png");
+	background-repeat:no-repeat;
+  background-position:-0.5% 0%;
+  padding-top:1.7em;
+  margin-left:auto;
+  margin-right:auto;
+}
 
 .quote:last-child{
 	background-image:url("https://coulton7.github.io/quoteslider/images/blockquote-bottom.png");
