--- a/quoteslide.css
+++ b/quoteslide.css
@@ -60,7 +60,7 @@ p{
     background-color: #f5f5f5;
 }
 
-.quote p:nth-child(1){
+.quote:nth-child(1){
 	background-image:url("https://coulton7.github.io/quoteslider/images/blockquote-top.png");
 	background-repeat:no-repeat;
   background-position:-1.5%-11%;
@@ -69,7 +69,7 @@ p{
   margin-right:auto;
 }
 
-.quote p:nth-child(2){
+.quote:nth-child(2){
 	background-image:url("https://coulton7.github.io/quoteslider/images/blockquote-top.png");
 	background-repeat:no-repeat;
   background-position:-0.5% 0%;
@@ -78,7 +78,7 @@ p{
   margin-right:auto;
 }
 
-.quote:last-child{
+.quote p:last-child{
 	background-image:url("https://coulton7.github.io/quoteslider/images/blockquote-bottom.png");
   background-position:98.7% 100%;
   background-repeat:no-repeat;
