--- a/quoteslide.css
+++ b/quoteslide.css
@@ -60,7 +60,7 @@ p{
     background-color: #f5f5f5;
 }
 
-.quote p:first-child{
+.quote-1 p:first-child{
 	background-image:url("https://coulton7.github.io/quoteslider/images/blockquote-top.png");
 	background-repeat:no-repeat;
   background-position:-1.5%-11%;
