--- a/quoteslide.css
+++ b/quoteslide.css
@@ -60,7 +60,7 @@ p{
     background-color: #f5f5f5;
 }
 
-.quote-1 p:first-child{
+.quote p:first-child{
 	background-image:url("https://coulton7.github.io/quoteslider/images/blockquote-top.png");
 	background-repeat:no-repeat;
   background-position:-1.6%-20%;
@@ -69,36 +69,8 @@ p{
   margin-right:auto;
 }
 
-.quote-2 p:first-child{
-	background-image:url("https://coulton7.github.io/quoteslider/images/blockquote-top.png");
-	background-repeat:no-repeat;
-  background-position:-1.55%-91%;
-  padding-top:1.7em;
-  margin-left:auto;
-  margin-right:auto;
-}
 
-.quote-3 p:first-child{
-	background-image:url("https://coulton7.github.io/quoteslider/images/blockquote-top.png");
-	background-repeat:no-repeat;
-  background-position:-1.6%-20%;
-  padding-top:1.7em;
-  margin-left:auto;
-  margin-right:auto;
-}
-
-.quote-1:last-child{
-	background-image:url("https://coulton7.github.io/quoteslider/images/blockquote-bottom.png");
-  background-position:98.7% 100%;
-  background-repeat:no-repeat;
-}
-.quote-2:last-child{
-	background-image:url("https://coulton7.github.io/quoteslider/images/blockquote-bottom.png");
-  background-position:98.7% 100%;
-  background-repeat:no-repeat;
-}
-
-.quote-3:last-child{
+.quote:last-child{
 	background-image:url("https://coulton7.github.io/quoteslider/images/blockquote-bottom.png");
   background-position:98.7% 100%;
   background-repeat:no-repeat;
