--- a/quoteslide.css
+++ b/quoteslide.css
@@ -7,6 +7,12 @@
     min-height: 100%
 }
 
+.main-container{
+  max-width: 1127px;
+  padding-left: 20px;
+  padding-right:20px;
+}
+
 @media (min-width:1170px) {
 #wrap {
   box-shadow:0 0 15px 8px rgba(181,182,185,1);
