--- a/quoteslide.css
+++ b/quoteslide.css
@@ -13,6 +13,11 @@
   padding-right:20px;
 }
 
+.content-wrapper{
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
 @media (min-width:1170px) {
 #wrap {
   box-shadow:0 0 15px 8px rgba(181,182,185,1);
