--- a/quoteslide.css
+++ b/quoteslide.css
@@ -167,12 +167,13 @@ p{
   }
   .carousel{
     height: 18em;
+    overflow-y: scroll;
   }
 }
 
 @media screen and (min-width: 768px) {
   .carousel{
-    height: 23em;
+    height: 22em;
   }
 }
 @media screen and (min-width: 992px){
