--- a/quoteslide.css
+++ b/quoteslide.css
@@ -78,7 +78,7 @@ p{
 .quote p:first-child{
 	background-image:url("https://coulton7.github.io/quoteslider/images/blockquote-top.png");
 	background-repeat:no-repeat;
-  background-position:-1.6%-20%;
+  background-position:-1.6% -20%;
   padding-top:1.7em;
   margin-left:auto;
   margin-right:auto;
@@ -177,9 +177,15 @@ p{
   .carousel{
     height: 22em;
   }
+  .quote p:first-child{
+        background-position:-2.6% -13%;
+  }
 }
 @media screen and (min-width: 992px){
   .carousel{
   height: 17em;
+}
+.quote p:first-child{
+      background-position:-1.6% -20%;
 }
 }
