--- a/quoteslide.css
+++ b/quoteslide.css
@@ -73,6 +73,7 @@ p{
     height:300px;
     float:left;
     background-color: #f5f5f5;
+    display:flex;
 }
 
 .quote p:first-child{
@@ -135,6 +136,10 @@ p{
     height: 45%;
     display: flex;
     position: relative;
+}
+
+.staff-image-card{
+  display:flex;
 }
 
 .img-adaptive{
