removed some commands

--- a/quoteslide.css
+++ b/quoteslide.css
@@ -24,23 +24,6 @@
 }
 }
 
-a {
-	text-decoration: none;
-}
-a:link {
-	color: #dd1e25;
-	border-bottom: 1px dashed #888c8f;
-}
-a:visited {
-	color: #dd1e25;
-	border-bottom: 1px dashed #b5b6b9;
-}
-a:hover {
-	color: #dd1e25;
-	border-bottom: 1px dashed #dd1e25;
-	text-decoration:none;
-}
-
 h2, h3, h4, h5, h6{
 	margin:10.5px 0;
 	color:#002a5b;
@@ -119,8 +102,13 @@ p{
     border-radius: 1px;
 }
 
+.dialog-box > p{
+    margin: 0;
+    display: table;
+    width: 100%;
+}
+
 .dialog-box > p > a{
-    padding: 12px 14px 0;
     display: table;
 }
 
@@ -148,6 +136,7 @@ p{
 	margin-right:auto;
 	width:100%;
 }
+
 @media screen and (max-width: 767px) {
   .parent-box{
     display: none;
@@ -159,6 +148,7 @@ p{
     overflow-y: scroll;
   }
 }
+
 @media screen and (min-width: 768px) {
   .carousel{
     height: 22em;
