--- a/quoteslide.css
+++ b/quoteslide.css
@@ -31,6 +31,19 @@ h2, h3, h4, h5, h6{
 	font-weight: 600;
 }
 
+a {
+	text-decoration: none;
+}
+a:link {
+	color: #dd1e25;
+}
+a:visited {
+	color: #dd1e25;
+}
+a:hover {
+	color: #dd1e25;
+}
+
 p{
   font-size: 14px;
 	line-height: 1.5em;
@@ -96,7 +109,6 @@ p{
     background: white;
     width: 100%;
     height: 55%;
-    display: table;
     position: relative;
     letter-spacing: 1px;
     border-radius: 1px;
@@ -110,6 +122,7 @@ p{
 
 .dialog-box > p > a{
     display: table;
+    padding:12px;
 }
 
 .dialog-box:after{
