--- a/quoteslide.css
+++ b/quoteslide.css
@@ -106,7 +106,7 @@ p{
 }
 
 .dialog-box{
-    background: white;
+    background: #ffffff;
     width: 100%;
     height: 55%;
     position: relative;
@@ -122,19 +122,6 @@ p{
 .dialog-box > p > a{
     display: table;
     padding:12px;
-}
-
-.dialog-box:after{
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 22px 0px 0 45px;
-    border-color: #ffffff transparent transparent transparent;
-    position: absolute;
-    left: 15%;
-    bottom: -20px;
-    content: close-quote;
-    z-index: 1;
 }
 
 .info{
