--- a/quoteslide.css
+++ b/quoteslide.css
@@ -124,6 +124,16 @@ p{
     padding:12px;
 }
 
+.dialog-box:after{
+    border-style: solid;
+    border-width: 22px 0px 0 45px;
+    border-color: #ffffff transparent transparent transparent;
+    position: absolute;
+    left: 15%;
+    bottom: -20px;
+    z-index: 1;
+}
+
 .info{
     width: 100%;
     display: flex;
