--- a/quoteslide.css
+++ b/quoteslide.css
@@ -125,6 +125,8 @@ p{
 }
 
 .dialog-box:after{
+    width: 0;
+    height: 0;
     border-style: solid;
     border-width: 22px 0px 0 45px;
     border-color: #ffffff transparent transparent transparent;
