--- a/quoteslide.css
+++ b/quoteslide.css
@@ -154,6 +154,9 @@ p{
   .carousel{
     height: 21em;
   }
+  .carousel-indicators{
+    bottom:-7em
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -162,6 +165,9 @@ p{
   }
   .quote p:first-child{
         background-position:-2.6% -13%;
+  }
+  .carousel-indicators{
+    bottom:-2em
   }
 }
 @media screen and (min-width: 992px){
