Adding css for the card image as the styling on other browsers than ff are different

--- a/quoteslide.css
+++ b/quoteslide.css
@@ -135,10 +135,13 @@ p{
     content: close-quote;
 }
 
+.staff-image-card{
+  width:60%;
+}
+
 .info{
     width: 100%;
     display: flex;
-    position: relative;
 }
 
 .img-adaptive{
