--- a/quoteslide.css
+++ b/quoteslide.css
@@ -135,13 +135,11 @@ p{
     content: close-quote;
 }
 
-.staff-image-card{
-  width:60%;
-}
-
 .info{
-    width: 100%;
-    display: flex;
+      width: 100%;
+      height: 45%;
+      display: flex;
+      position: relative;
 }
 
 .img-adaptive{
