Adding width to image again

--- a/quoteslide.css
+++ b/quoteslide.css
@@ -142,6 +142,10 @@ p{
       position: relative;
 }
 
+.staff-image-card{
+  width: 60%;
+}
+
 .img-adaptive{
 	margin-left:auto;
 	margin-right:auto;
