--- a/quoteslide.css
+++ b/quoteslide.css
@@ -83,7 +83,7 @@ p{
     width:100%;
     height:300px;
     float:left;
-    background-color: #f5f5f5;
+    background-color: #ffffff;
     display:flex;
 }
 
@@ -107,7 +107,7 @@ p{
 }
 
 .dialog-box{
-    background: #ffffff;
+    background: #f5f5f5;
     width: 100%;
     height: 55%;
     position: relative;
@@ -128,7 +128,7 @@ p{
 .dialog-box:after{
     border-style: solid;
     border-width: 22px 0px 0 45px;
-    border-color: #ffffff transparent transparent transparent;
+    border-color: #f5f5f5 transparent transparent transparent;
     position: absolute;
     left: 15%;
     bottom: -20px;
