--- a/quoteslide.css
+++ b/quoteslide.css
@@ -104,7 +104,6 @@ p{
 .box{
     height:100%;
     padding: 15px 15px 0 15px;
-    border:1px solid #f5f5f5
 }
 
 .dialog-box{
@@ -141,6 +140,7 @@ p{
       height: 45%;
       display: flex;
       position: relative;
+      border-bottom: 1px solid:#f5f5f5 
 }
 
 .staff-image-card{
