--- a/quoteslide.css
+++ b/quoteslide.css
@@ -140,7 +140,7 @@ p{
       height: 45%;
       display: flex;
       position: relative;
-      border-bottom: 1px solid #f5f5f5 
+      border-bottom: 2px solid #002a5b;
 }
 
 .staff-image-card{
