--- a/quoteslide.css
+++ b/quoteslide.css
@@ -184,3 +184,47 @@ p{
       background-position:-1.6% -20%;
 }
 }
+
+.row-fluid [class*="span"] {
+    display: block;
+    width: 100%;
+    min-height: 31px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    float: left;
+    margin-left: 2.56410256%;
+    *margin-left: 2.51091107%
+}
+
+.row-fluid {
+        width: 100%;
+        *zoom:1}
+
+    .row-fluid:before,.row-fluid:after {
+        display: table;
+        content: "";
+        line-height: 0
+    }
+
+    .row-fluid:after {
+        clear: both
+    }
+
+.row-fluid [class*="span"]:first-child {
+        margin-left: 0
+    }
+
+    .row-fluid .controls-row [class*="span"]+[class*="span"] {
+        margin-left: 2.56410256%
+    }
+
+.row-fluid .span9 {
+        width: 74.35897436%;
+        *width: 74.30578287%
+    }
+
+    .row-fluid .span3 {
+       width: 23.07692308%;
+       *width: 23.02373159%
+   }
