--- a/quoteslide.css
+++ b/quoteslide.css
@@ -180,6 +180,9 @@ p{
     display: inline-block;
     width:75%;
   }
+  .quote p:first-child{
+        background-position:-2.6% -13%;
+  }
 }
 
 @media screen and (min-width: 768px) {
