--- a/quoteslide.css
+++ b/quoteslide.css
@@ -90,7 +90,7 @@ p{
     display:flex;
 }
 
-.blockquote-light p:first-child{
+.blockquote-light p:last-child{
 	background-image:url("https://coulton7.github.io/quoteslider/images/blockquote-top.png");
 	background-repeat:no-repeat;
   padding-top:1.7em;
@@ -190,7 +190,7 @@ p{
   .carousel{
     height: 22em;
   }
-  .blockquote-light p:first-child{
+  .blockquote-light p:last-child{
         background-position:-2.6% -13%;
   }
   .carousel-indicators{
@@ -202,7 +202,7 @@ p{
   .carousel{
   height: 17em;
 }
-.blockquote-light p:first-child{
+.blockquote-light p:last-child{
       background-position:-1.6% -20%;
 }
 }
