--- a/css/site-style.css
+++ b/css/site-style.css
@@ -2052,7 +2052,7 @@ ul.resource-cats a, ul.about-us-cats a {
   }
 
   .carousel-inner .item.active>div:first-child+div {
-    display: flex;
+    display: block;
   }
 
   .carousel-inner .item.active>div:first-child+div+div {
@@ -2060,16 +2060,16 @@ ul.resource-cats a, ul.about-us-cats a {
   }
 
   .media-carousel .carousel-inner .item.prev.right>div:first-child, .media-carousel .carousel-inner .item.prev.right>div:first-child+div {
-    display: flex;
+    display: block;
     height: 100%;
   }
 
   .media-carousel .carousel-inner .item.next.left>div:first-child, .media-carousel .carousel-inner .item.prev.right>div:first-child+div {
-    display: flex;
+    display: block;
   }
 
   .media-carousel .carousel-inner .item.active>div:first-child {
-    display: flex;
+    display: block;
   }
 
   .noscroll .action-menu {
@@ -2257,11 +2257,11 @@ ul.resource-cats a, ul.about-us-cats a {
   }
 
   .carousel-inner .item.active>div:first-child+div {
-    display: flex;
+    display: block;
   }
 
   .carousel-inner .item.active>div:first-child+div+div {
-    display: flex;
+    display: block;
   }
 
   .carousel-inner .item.active .news, .carousel-inner.horizontal>.item.active.right .news, .carousel-inner.horizontal>.item.active.left .news, .carousel-inner.horizontal>.item.prev.right .news, .carousel-inner.horizontal>.item.next.left .news {
