Updating it to block from flex appears to have worked

--- a/css/site-style.css
+++ b/css/site-style.css
@@ -2265,7 +2265,7 @@ ul.resource-cats a, ul.about-us-cats a {
   }
 
   .carousel-inner .item.active .news, .carousel-inner.horizontal>.item.active.right .news, .carousel-inner.horizontal>.item.active.left .news, .carousel-inner.horizontal>.item.prev.right .news, .carousel-inner.horizontal>.item.next.left .news {
-    display: flex;
+    display: block;
   }
 
   .carousel-inner.horizontal>.item.active.right .news:last-child, .carousel-inner.horizontal>.item.active.left .news:last-child, .carousel-inner.horizontal>.item.prev.right .news:last-child, .carousel-inner.horizontal>.item.next.left .news:last-child {
